--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -18,6 +18,7 @@
     font-family: $ff-titulos;
     font-weight: 600;
     font-size: 1.8rem;
+   
   }
 
   &__parrafo {
@@ -63,6 +64,13 @@
     height: 50%;
     object-fit: fill;
     border-radius: 70px;
+    animation-name: growAndShrink;
+    animation-duration: 3s;
+    animation-delay: 1s;
+  animation-iteration-count: 2;
+  animation-direction: normal;
+  animation-fill-mode: both;
+  
   }
 
   &__parrafo {
