Correcciones del afterclass

--- a/scss/pages/_explorar.scss
+++ b/scss/pages/_explorar.scss
@@ -28,7 +28,7 @@
 
   &--explorar {
     @include banner-secciones;
-    background-image: url(/img/banner-explora.jpg);
+    background-image: url(./img/banner-explora.jpg);
     background-position: 100% 50%;
   }
 }
