--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -4,7 +4,7 @@
   width: 100%;
   padding: 4%;
   height: 350px;
-  background-image: url(/img/fondohome.jpg);
+  background-image: url(./img/fondohome.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
