--- a/scss/pages/_contacto.scss
+++ b/scss/pages/_contacto.scss
@@ -28,7 +28,7 @@
   
     &--contacto {
       @include banner-secciones;
-      background-image: url(/img/banner-contacto.jpg);
+      background-image: url(./img/banner-contacto.jpg);
       background-position: 100% 50%;
     }
   }
@@ -50,6 +50,9 @@
   
 &__name {
     grid-column: span 3;
+    border-radius: 10%;
+    font-family: $ff-parrafos;
+
 }
 
 &__mail {
