--- a/scss/pages/_hoteles.scss
+++ b/scss/pages/_hoteles.scss
@@ -3,7 +3,7 @@
 .banner-princ {
 
   &--hoteles {
-    background-image: url(/img/banner-hotel.jpg);
+    background-image: url(./img/banner-hotel.jpg);
     background-position: 100% 100%;
     @include banner-secciones;
   }
