--- a/css/styles.css
+++ b/css/styles.css
@@ -341,7 +341,7 @@ body {
   width: 100%;
   padding: 4%;
   height: 350px;
-  background-image: url(/img/fondohome.jpg);
+  background-image: url(./img/fondohome.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1070,7 +1070,7 @@ body {
   flex-flow: column nowrap;
   justify-content: flex-start;
   margin-bottom: 5%;
-  background-image: url(/img/banner-explora.jpg);
+  background-image: url(./img/banner-explora.jpg);
   background-position: 100% 50%;
 }
 
@@ -1365,7 +1365,7 @@ body {
 }
 /* Banner */
 .banner-princ--hoteles {
-  background-image: url(/img/banner-hotel.jpg);
+  background-image: url(./img/banner-hotel.jpg);
   background-position: 100% 100%;
   background-attachment: fixed;
   height: 350px;
@@ -1952,7 +1952,7 @@ body {
   flex-flow: column nowrap;
   justify-content: flex-start;
   margin-bottom: 5%;
-  background-image: url(/img/banner-contacto.jpg);
+  background-image: url(./img/banner-contacto.jpg);
   background-position: 100% 50%;
 }
 
@@ -1974,6 +1974,8 @@ body {
 }
 .form-contacto__name {
   grid-column: span 3;
+  border-radius: 10%;
+  font-family: "Montserrat", sans-serif;
 }
 .form-contacto__mail {
   grid-column: span 3;
