Edición fondo del banner Explorar

--- a/css/styles.css
+++ b/css/styles.css
@@ -1069,7 +1069,7 @@ body {
   flex-flow: column nowrap;
   justify-content: flex-start;
   margin-bottom: 5%;
-  background-image: url(./img/banner-explora.jpg);
+  background-image: url(https://ibb.co/ZgrY2RH);
   background-position: 100% 50%;
 }
 
